--- a/config.yaml
+++ b/config.yaml
@@ -3,3 +3,9 @@ query_n_cams: 4
 
 # camera configuration path
 cam_config: ./cam.yaml
+
+video:
+  width: 480
+  height: 640
+  fps: 24.0
+  output_file_name: "output"
